# AdventOfCode

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: advent-of-code-ci-build.yml  cmake-multi-platform.yml
2018/: advent.sh
2018/day01/: CMakeLists.txt  day01.cpp  day01.h  day01_main.cpp  day01_main.h  day01_test.cpp
2018/day02/: day02.cpp  day02.h  day02_main.cpp  day02_test.cpp
2018/day03/: CMakeLists.txt  day03.cpp  day03.h  day03_main.cpp  day03_test.cpp
2018/day04/: CMakeLists.txt  day04.cpp  day04.h  day04_main.cpp  day04_test.cpp
2018/day05/: day05.cpp  day05.h  day05_main.cpp  day05_test.cpp
2018/day06/: day06.cpp  day06.h  day06_main.cpp  day06_test.cpp
2018/day07/: day07.cpp  day07.h  day07_main.cpp  day07_test.cpp
2018/day08/: day08.cpp  day08.h  day08_main.cpp  day08_test.cpp
2018/day09/: day09.cpp  day09.h  day09_main.cpp  day09_test.cpp
2018/day10/: day10.cpp  day10.h  day10_main.cpp  day10_test.cpp
2018/day11/: day11.cpp  day11.h  day11_main.cpp  day11_test.cpp
2018/day12/: day12.cpp  day12.h  day12_main.cpp  day12_test.cpp
2018/day13/: day13.cpp  day13.h  day13_main.cpp  day13_test.cpp
2018/day14/: day14.cpp  day14.h  day14_main.cpp  day14_test.cpp
2018/day15/: day15.cpp  day15.h  day15_main.cpp  day15_test.cpp
2018/day16/: day16.cpp  day16.h  day16_main.cpp  day16_test.cpp
2018/day17/: day17.cpp  day17.h  day17_main.cpp  day17_test.cpp
2018/dayNN/: day01.h  dayNN.cpp  dayNN.h  dayNN_main.cpp  dayNN_test.cpp
2018/lib/: CMakeLists.txt  advent.cpp  advent.h  advent_test.cpp
2023/: advent.hsfiles  runall.bat
2023/day01/: CHANGELOG.md  README.md  day01.cabal  package.yaml
2023/day02/: CHANGELOG.md  README.md  day02.cabal  package.yaml
2023/day03/: CHANGELOG.md  README.md  day03.cabal  package.yaml
2023/day04/: CHANGELOG.md  LICENSE  README.md  day04.cabal  package.yaml
2023/day05/: CHANGELOG.md  README.md  day05.cabal  package.yaml
2023/day06/: CHANGELOG.md  README.md  day06.cabal  package.yaml
2023/day07/: CHANGELOG.md  README.md  day07.cabal  package.yaml
2023/day08/: CHANGELOG.md  README.md  day08.cabal  package.yaml
2023/day09/: CHANGELOG.md  README.md  day09.cabal  package.yaml
2023/day10/: CHANGELOG.md  README.md  day10.cabal  package.yaml
2023/day11/: CHANGELOG.md  README.md  day11.cabal  package.yaml
2023/day12/: CHANGELOG.md  README.md  day12.cabal  package.yaml
2023/day13/: CHANGELOG.md  README.md  day13.cabal  package.yaml
2023/day14/: CHANGELOG.md  README.md  day14.cabal  package.yaml
2023/day15/: CHANGELOG.md  README.md  day15.cabal  package.yaml
2023/day16/: .gitignore  CHANGELOG.md  README.md  day16.cabal  package.yaml
2023/day17/: CHANGELOG.md  README.md  day17.cabal  package.yaml
2023/day18/: CHANGELOG.md  README.md  day18.cabal  example.txt  out.txt  package.yaml
2023/day19/: CHANGELOG.md  README.md  day19.cabal  package.yaml
2023/day20/: CHANGELOG.md  README.md  day20.cabal  package.yaml
2023/day21/: CHANGELOG.md  README.md  day21.cabal  package.yaml
2023/day22/: day22.cabal  package.yaml
2023/day23/: CHANGELOG.md  README.md  day23.cabal  package.yaml
2023/day24/: CHANGELOG.md  README.md  day24.cabal  package.yaml
2023/day25/: CHANGELOG.md  README.md  day25.cabal  package.yaml
2024/day01/: day01.cpp  day01.h  day01_main.cpp  day01_test.cpp
2024/day02/: day02.cpp  day02.h  day02_main.cpp  day02_test.cpp
2024/day03/: day03.cpp  day03.h  day03_main.cpp  day03_test.cpp
2024/day04/: day04.cpp  day04.h  day04_main.cpp  day04_test.cpp
2024/day05/: day05.cpp  day05.h  day05_main.cpp  day05_test.cpp
2024/day06/: day06.cpp  (+3 more)
lib/: CMakeLists.include  CMakeLists.txt  advent.cpp  advent.h  advent.sh  advent_test.cpp
lib/dayNN/: CMakeLists.txt  dayNN.h  dayNN_main.cpp  dayNN_test.cpp
(+222 files in other folders)
